kubernetes/jellyfin/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jellyfin
  name: jellyfin
spec:
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 8096
  selector:
    app: jellyfin
  type: ClusterIP
